# FunGT

./: .gitignore  CMakeLists.txt  README.md
AnimatedModel/: animated_model.cpp  animated_model.hpp
Animation/: animation.cpp  animation.hpp
Animations/FBX/: def.fbx
Animations/Luxo/: Luxo-Jr-Model-Anim.dae
Animations/car/: license.txt  scene.gltf
Animations/dancing_alien/: license.txt  scene.gltf
Animations/trashcan/: trash-can-color.dae  trash-can-color2.gltf  trash-can.dae  trash-can.fbx  trash-can.glb  trash-can2.gltf  trash-can3.dae  trash-can4.dae  trash-can5.dae  trash-can6.dae
App/: fungl.cpp  fungl.hpp
Bone/: bone.cpp  bone.hpp
Camera/: camera.cpp  camera.hpp
ComputationalGeom/: aabb.hpp
CubeMap/: cube_map.cpp  cube_map.hpp
DataPaths/: datapaths.hpp
Display/: display.cpp  display.hpp  exmain.cpp  main.cpp  tocompile.txt  tocompile_macos.txt  vertex_core.glsl
Engine/: graphicEngine.cpp  graphicEngine.hpp
GT/: graphicsTool.cpp  graphicsTool.hpp
GUI/: demo_particles_window.hpp  fungt_gui_headers.hpp  gui.cpp  gui.hpp  imgui_layer.hpp  imgui_window.hpp  lights_editor_window.hpp  material_editor_window.hpp  properties_window.hpp  render_action_window.hpp  render_info_window.hpp  render_settings_window.hpp  scene_hierarchy_window.hpp
Geometries/: box.cpp  box.hpp  cube.cpp  cube.hpp  cube.hpp.txt  cube_2.cpp  cube_2.cpp.txt  cube_2.hpp  cube_2.hpp.txt  inf_grid.cpp  inf_grid.hpp  plane.cpp  plane.hpp  primitives.cpp  primitives.hpp  pyramid.cpp  pyramid.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  square.cpp  square.hpp
Helpers/: helpers.cpp  helpers.hpp
Imgui_Setup/: imgui_setup.cpp  imgui_setup.hpp
InfoDevice/: cuda_backend.cpp  gpu_device_info.cpp  gpu_device_info.hpp  gpu_device_manager.cpp  gpu_device_manager.hpp  sycl_backend.cpp
InfoWindow/: infowindow.cpp  infowindow.hpp
Layer/: layer.hpp  layer_stack.hpp
Loader/: loader.hpp
Material/: material.cpp  material.hpp
Matrix/: matrix3x3f.cpp  matrix3x3f.hpp  matrix4x4f.cpp  matrix4x4f.h
Mesh/: fungtMesh.cpp  fungtMesh.hpp  mesh.cpp  mesh.hpp
Mode/: imode.hpp
Model/: model.cpp  model.hpp
PBR/BVH/: aabb.hpp  bvh_builder.cpp  bvh_builder.hpp  bvh_node.hpp
PBR/HitData/: hit_data.hpp
PBR/Intersection/: intersection.cpp  intersection.hpp
PBR/Light/: light.hpp
PBR/PBRCamera/: pbr_camera.hpp
PBR/Ray/: ray.hpp
PBR/Space/: defualt_geometries.hpp  space.cpp  space.hpp
PBR/TextureManager/: cpu_texture.hpp  cuda_texture.cpp  cuda_texture.hpp  idevice_texture.hpp  sampler2d_texture.hpp  sycl_texture.cpp  sycl_texture.hpp  texture_manager.hpp  texture_types.hpp
PBR/Triangle/: Triangle.hpp
PBR/main/: CMakeLists.txt  backup_CMK  main.cpp  worked_CMAKE
ParticleSimulation/: particle_demos.hpp  particle_simulation.cpp  particle_simulation.hpp  particle_simulation_rtc.cpp  particle_simulation_rtc.hpp  perlin_noise_gpu.hpp
Path_Manager/: path_manager.cpp  path_manager.hpp
PerlinNoise/: perlin_noise.cpp  perlin_noise.hpp
Physics/BroadPhase/: uniform_grid.hpp
Physics/Clothing/: clothing.cpp  clothing.hpp
Physics/Collider/: collider.cpp  collider.hpp
Physics/CollisionManager/: collision_manager.cpp  collision_manager.hpp
Physics/Collisions/: manifold_collision.cpp  manifold_collision.hpp  simple_collision.cpp  simple_collision.hpp
Physics/Contact/: contact.hpp  contact_manifold.hpp
Physics/ContactHelpers/: contact_helpers.hpp
Physics/GPU/: gpu_integration_kernel.hpp  gpu_physics_world.hpp  ocl_sycl_interop.h
Physics/Integrators/: euler_integrator.hpp  integrator.hpp
Physics/ParticleSystem/: noise_particle.cpp  noise_particle.hpp  particle.cpp  particle.hpp  particle_sys.cpp  particle_sys.hpp  random_particle.cpp  random_particle.hpp
Quaternion/: quaternion.hpp
Random/: fgt_rng.hpp  random.cpp  random.hpp
Renderable/: renderable.hpp
Renders/: IRender.hpp  display_graphics.cpp  display_graphics.hpp  framebuffer.cpp  framebuffer.hpp
Samples/new_model_loading/: CMakeLists.txt  main.cpp
Samples/viewport/: CMakeLists.txt  main.cpp
SceneManager/: scene_manager.cpp  scene_manager.hpp
Shaders/: shader.cpp  shader.hpp
SimpleGeometry/: simple_geometry.cpp  simple_geometry.hpp
SimpleModel/: simple_model.cpp  simple_model.hpp
Textures/: textures.cpp  textures.hpp
Triangle/: triangle.hpp
Vector/: gpu_vec3.hpp  vector3.hpp
Vertex/: fungtVertex.hpp
VertexGL/: vertexArrayObjects.cpp  vertexArrayObjects.hpp  vertexBuffers.cpp  vertexBuffers.hpp  vertexIndices.cpp  vertexIndices.hpp
ViewPort/: viewport.cpp  viewport.hpp
Window/: window.cpp  window.hpp
clothing/: CMakeLists.txt
flib/: ParticleSystem.hpp  funlib.hpp  matrix.hpp  matrix_impl.hpp  matrix_operations.hpp  sycl_handler.hpp  vector.hpp  vector_impl.hpp
funGT/: fungt.cpp  fungt.hpp
include/: glmath.hpp  imgui_headers.hpp  prerequisites.hpp
main/: CMakeLists.txt  FunGT  Makefile  entrevista  entrevista.cpp  entrevista_2  entrevista_2.cpp  entrevista_3  entrevista_3.cpp  entrevista_4  entrevista_4.cpp  entrevista_5  entrevista_5.cpp  main.cpp  pCMakeLists.txt
main_ps/: CMakeLists.txt  main.cpp
resources/: animation_fs.glsl  animation_material_fs.glsl  animation_material_vs.glsl  animation_vs.glsl  ball.glsl  box_fs.glsl  box_instanced_fs.glsl  box_instanced_vs.glsl  clothing.fs  cube.fs  cube.vs  cube_instanced_vs.glsl  fragment_ball.glsl  fragment_core.glsl  fragment_core_OSX.glsl  fragment_core_aux.glsl  fragment_cube.glsl  fragment_sphere.glsl  luxoball_fs.glsl  luxoball_vs.glsl  luxolamp_fs.glsl  luxolamp_vs.glsl  model_loading_fs.glsl  model_loading_vs.glsl  particle.fs  particle.vs  skybox.fs  skybox.vs  smoke_fs.glsl  smoke_vs.glsl  sphere_fs.glsl  sphere_instanced_fs.glsl  sphere_instanced_vs.glsl  sphere_vs.glsl  vertex_ball.glsl  vertex_core.glsl  vertex_core_OSX.glsl  vertex_core_aux.glsl  vertex_cube.glsl  vertex_sphere.glsl
shaders/: fungt_default.fs  fungt_default.vs  grid_fs.glsl  grid_vs.glsl  primitive_fs.glsl  primitive_vs.glsl
tests/gpuVec3/: CMakeLists.txt  test_gpu_rigid_body.cpp  test_gpu_vec3.cpp  test_integration_kernel.cpp
(+58 files in other folders)
